# AntBot

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  LICENSE.md  Procfile  README.md  SECURITY.md  antbot.service  autodocumentation_python.py  debugging_payload.json  docker-compose.yaml  docker-compose.yml  env_example  example_tv_webhook_message.json  main.py  okx_polling_service_app.py  pyproject.toml  requirements.txt  rest_app.py  startup.sh  test_fills_report.py  update_documentation.sh  websocket_app.py
.docker/: bot.dockerfile  dashboard.dockerfile  nginx.dockerfile
_ignoredtrackedcontent/: README.md  todo.py  websocket.py
data/: config.py
docs/: autodocumentation_python.html  conf.py  docs.source.conf.html  firebase_tools.BaseClasses.html  firebase_tools.FirestoreClient.html  firebase_tools.authenticate.html  genindex.html  h2o_dashboard.dashboard.html  h2o_dashboard.pages.documentation_page.html  h2o_dashboard.pages.home_page.html  h2o_dashboard.pages.okx_dashbaord_page.okx_account_widget.html  h2o_dashboard.pages.okx_dashbaord_page.okx_algo_orders_widget.html  h2o_dashboard.pages.okx_dashbaord_page.okx_antbot_okx_premium_indicator_handler.html  h2o_dashboard.pages.okx_dashbaord_page.okx_dashboard_page.html  h2o_dashboard.pages.okx_dashbaord_page.okx_fill_report_widget.html  h2o_dashboard.pages.okx_dashbaord_page.okx_orders_widget.html  h2o_dashboard.pages.okx_dashbaord_page.okx_positions_widget.html  h2o_dashboard.pages.okx_dashboard_page.html  h2o_dashboard.pages.okx_debug_page.html  h2o_dashboard.pages.okx_streams.html  index.html  (+130 more)
(+6611 files in other folders)
