[tool.poetry]
name = "antbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "^3.7.2"
bcrypt = "^4.1.2"
cffi = "^1.16.0"
click = "^8.1.7"
colorama = "^0.4.6"
ecdsa = "^0.18.0"
fastapi = "^0.108.0"
greenlet = "^3.0.3"
h11 = "^0.14.0"
httptools = "^0.6.1"
passlib = "^1.7.4"
pyasn1 = "^0.5.1"
pycparser = "^2.21"
pydantic = "^2.5.3"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
pyyaml = "^6.0.1"
rsa = "^4.9"
six = "^1.16.0"
sqlalchemy = "^2.0.25"
typing-extensions = "^4.9.0"
uvicorn = "^0.25.0"
watchgod = "^0.8.2"
websockets = "^12.0"
requests = "^2.31.0"
websocket = "^0.2.1"
httpx = "^0.26.0"
aioredis = "^2.0.1"
redis = "^5.0.1"
h2o-wave = "^1.0.0"
pandas = "^2.1.4"
h5py = "^3.10.0"
numpy = "^1.26.3"
Sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
shortuuid = "^1.0.11"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
